--- a/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
@@ -53,6 +53,11 @@
 	    		</a>
 	  		</div>
 		</header>
+		<div class=" am-g">
+        	<div class="am-u-sm-12" id="hotel_img">
+    			<!--<img src='../images/hotelDefault.jpg' class='am-img-responsive' style="margin:auto"/>-->
+        	</div>
+        </div>
 	    <ul class="am-list am-list-static am-list-border">
 	        <li onclick="onclick_hotel()">
 	        	<span class="am-badge am-badge-default am-text-lg">
@@ -78,10 +83,10 @@
 		</div>
 		<div class="am-g">
 	  		<div class="am-u-sm-6">
-			    <input type="text" class="am-form-field" placeholder="开始时间" data-am-datepicker readonly required id="my-start"/>
+			    <input type="text" class="am-form-field" placeholder="开始时间" data-am-datepicker readonly required id="my-start" style="text-align: center;border-radius: 20px;color: deepskyblue;"/>
 	  		</div>
 	  		<div class="am-u-sm-6">
-	  			<input type="text" class="am-form-field" placeholder="结束日期" data-am-datepicker readonly required id="my-end"/>  
+	  			<input type="text" class="am-form-field" placeholder="结束日期" data-am-datepicker readonly required id="my-end" style="text-align: center;border-radius: 20px;color: deepskyblue;"/>  
 	  		</div>
 		</div>
 	    <div data-am-widget="list_news" class="am-list-news am-list-news-default">
