--- a/src/main/webapp/wechatbooking/customer/templates/WfrmOrder.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmOrder.html
@@ -14,9 +14,10 @@
     <link rel="apple-touch-icon-precomposed" href="../api/AmazeUI/i/app-icon72x72@2x.png">
     <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
     <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
-    <link rel="stylesheet" type="text/css" href="../api/webuploader/webuploader.css" />
+    <link rel="stylesheet" type="text/css" href="../api/css/cityPicker.css">
+    <script type="text/javascript" 			src="http://api.map.baidu.com/api?v=2.0&ak=kpc15j1AQFyUVq5743wbnFDMpkjvlUBG">
+	</script>
     <script src="../api/jQuery/jquery.min.js"></script>
-    <script src="../api/Echart/dist/echarts.js"></script>
     <script src="../js/WfrmOrder.js"></script>
     <script src="../js/common.js"></script>
     <script src="../js/resource.js"></script>
@@ -32,6 +33,48 @@
     <script src="../api/AmazeUI/js/amazeui.min.js"></script>
     <!--<![endif]-->
     <script src="../api/AmazeUI/js/app.js"></script>
+    <script src="../api/cityPicker/cityPicker.js"></script>
+    <style>
+    	.search{
+    		background-color: #4FBFFF;
+    		text-align: center;
+    		height: 57px;
+    		padding-top: 5px;
+    	}
+    	.search .box{
+    		height: 46px;
+    		width: 80%;
+    		border-radius:30px;
+    		background-color: white;
+    		line-height: 46px;
+    		margin: auto;
+    	}
+    	.search .box input{
+    		width: 70%;
+    		height: 2.5em;
+    		line-height: 2.5em;
+    		border: 0px;
+    		outline:none; /*选中时去掉边框*/
+    	}
+    	.search .box .icon{
+    		background-image: url(../images/search.png);
+    		float: left;
+    		height: 32px;
+    		width: 32px;
+    		margin:8px 0px 0px 8px;
+    	}
+    	.change{
+    		color: white;
+    		background-color: #0E90D2;
+    		height: 36px;
+    		line-height: 36px;
+    		border: 0px;
+    		padding-left: 36%;
+    		width: 100%;
+    		margin-left: -20%;
+    		text-align: center;
+    	}
+    </style>
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -44,20 +87,28 @@
             <i class="am-header-icon am-icon-home"></i>
         </a>
     </div>
-    <h1 class="am-header-title">
-        <a href="#title-link" class="">酒店列表</a>
-    </h1>
+    <!-- 城市选择 -->
+    <input type="text" class="change city" id="selectPosition" readonly="true"/>
     <div class="am-header-right am-header-nav">
         <a href="#right-link" class="">
             <i class="am-header-icon am-icon-bars"></i>
         </a>
     </div>
+    <!-- 地图容器 -->
+    <span id="allmap" style="display: none;"></span>
 </header>
+<!-- 酒店查询框 -->
+<div class="search">
+	<div class="box">
+		<div class="icon"></div>
+		<input type="text" placeholder="酒店名、街道" id="searchBox"/>
+	</div>
+</div>
 <!-- 酒店详情列表 -->
 <div data-am-widget="list_news" class="am-list-news am-list-news-default">
     <div class="am-list-news-bd">
         <ul class="am-list" id="hotel_list">
-
+			
         </ul>
     </div>
 </div>
