--- a/src/main/webapp/wechatbooking/customer/templates/WfrmBookDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmBookDetail.html
@@ -15,9 +15,11 @@
 	    <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
 	    <link rel="stylesheet" type="text/css" href="../api/webuploader/webuploader.css" />
+	    <link rel="stylesheet" type="text/css" href="../api/pickerDateRange/dateRange.css" />
 	    <script src="../api/jQuery/jquery.min.js"></script>
 	    <script src="../api/Echart/dist/echarts.js"></script>	    
 	    <script src="../js/WfrmBookDetail.js"></script>
+	    <script src="../api/pickerDateRange/dateRange.js"></script>
 	    <script src="../js/common.js"></script>
 		<script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
@@ -41,23 +43,26 @@
         		</div>
 	            <div class="am-panel am-panel-default">
 	                <div class="am-panel-bd">
+	                	入住房型：
 	                    <strong id="room_name">
                         	
 	                    </strong>
-	                    <br />
-	                    <p>
-	                    	入住
-	                    	<strong id="my-startDate">
-	                        	<!--2016-09-26-->
-	                    	</strong> 
-	                    	离店 
-	                    	<strong id="my-endDate">
-	                        	<!--2016-09-27-->
-	                    	</strong> 
-	                    	(住
-	                    	<span id="stayDay"></span>
-	                    	晚)
-	                    </p>
+	                </div>
+	                <div style="display: inline-block;padding:0 1.25rem">
+	                	<div style="display: inline-block;vertical-align: top;">入住时间：</div>
+	                	<div class='calendar_dates' style="display: inline-block;"> 
+			                <div class="ta_date" id="div_date1" style="border:0px;">
+			                    <span id="date1" style="color:#4169E1;font-weight: 900;"></span>
+			                </div>
+			                <div id="datePicker1"></div>
+			            </div>
+			            <div style="display: inline-block;vertical-align: 6px;margin-left: 10px;">
+			            	入住<br />
+			            	离店
+			            </div>
+			            <div style="display: inline-block;vertical-align: 6px;margin-left: 10px;">
+			            	(住<span id="stayDay"></span>晚)
+			            </div>
 	                </div>
 	            </div>
 	            <div class="am-g">
