--- a/src/main/webapp/wechatbooking/customer/templates/WfrmMyOrder.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmMyOrder.html
@@ -101,7 +101,7 @@
 			    <ul class="am-list">
 			      <li class="am-modal-actions-header" style="cursor: pointer;" 
 			      	onclick="onclick_pay('crm_pay')">
-			      	<span class="order-button">CRM支付</span>
+			      	<span class="order-button">会员支付</span>
 			      </li>
 			      <li class="am-modal-actions-header" style="cursor: pointer;" 
 			      	onclick="onclick_pay('wechat_pay')">
