--- a/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
@@ -132,14 +132,14 @@
 		</div> 	
 	</body>
 	<!--支付弹出选项-->
-	<div class="am-modal-actions" id="my-actions">
-	  	<div class="am-modal-actions-group">
+	<div class="am-modal-actions" id="my-actions" >
+	  	<div class="am-modal-actions-group" id="my-actions-body">
 		    <ul class="am-list">
-		      <li class="am-modal-actions-header" style="cursor: pointer;" 
+		      <li class="am-modal-actions-header" style="cursor: pointer;"
 		      	onclick="onclick_pay('crm_pay')">
 		      	<span class="order-button">会员支付</span>
 		      </li>
-		      <li class="am-modal-actions-header" style="cursor: pointer;" 
+		      <li class="am-modal-actions-header" style="cursor: pointer;"
 		      	onclick="onclick_pay('wechat_pay')">
 		      	<span class="order-button">微信支付</span>
 		      </li>
