对预订首页中的联系电话进行屏蔽

--- a/src/main/webapp/wechatbooking/customer/templates/WfrmMenuBar.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmMenuBar.html
@@ -122,11 +122,11 @@
 	                    </li>
 	                </ul>
 	            </div>
-	            <!-- bottom -->
-	            <div class="tel">
-	            	<span>天财商龙大酒店</span> | 
-	            	<a>15900345728</a>
-	            </div>
+	            <!--&lt;!&ndash; bottom &ndash;&gt;-->
+	            <!--<div class="tel">-->
+	            	<!--<span>天财商龙大酒店</span> | -->
+	            	<!--<a>15900345728</a>-->
+	            <!--</div>-->
 	        </div>
     	</div>
     	<script src="../api/jQuery/jquery.fullPage.min.js"></script> 
